# joulescope-util

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.ipynb
joulescopeutil/: __init__.py  functions.py  joulescope.py  joulescope_.py  region.py
tests/: test_functions.py  test_joulescope_.py  test_region.py
