[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "joulescopeutil"
version = "0.1.0"
authors = [{name = "Jonathan Larochelle", email = "jonathan.larochelle@h-ka.de"}, ]
description = "Utilities to use the Joulescope to measure the energy consumption of embedded systems."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy>=1.7.0",
    "joulescope>=1.3.0",
]
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",]

[tool.setuptools.packages.find]
include = ["joulescopeutil*"]

[project.urls]
Homepage = "https://github.com/HKA-IES/joulescope-util"
Issues = "https://github.com/HKA-IES/joulescope-util/issues"
